# CortexSales

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  cortexsales.db  main.py  pyproject.toml  requirements.txt  run.py
backend/app/ai/: __init__.py
backend/app/ai/agents/: __init__.py  base.py  closer.py  gerente.py  sdr.py
backend/app/ai/langgraph/: __init__.py  graph.py  state.py
backend/app/ai/prompts/: __init__.py  closer.py  gerente.py  sdr.py
backend/app/ai/tools/: __init__.py  whatsapp.py
backend/app/api/: __init__.py
backend/app/api/routes/: agents.py  branding.py  health.py  products.py  whatsapp.py
backend/app/controllers/: __init__.py  agent_controller.py  branding_controller.py  health_controller.py  product_controller.py  whatsapp_controller.py
backend/app/core/: settings.py
backend/app/database/: __init__.py  session.py
backend/app/models/: __init__.py  branding.py  product.py
backend/app/repositories/: __init__.py  branding_repository.py  product_repository.py
backend/app/schemas/: agent_schema.py  branding_schema.py  product_schema.py  whatsapp_schema.py
backend/app/services/: __init__.py  agent_protocol_service.py  branding_service.py  evolution_client.py  product_service.py  whatsapp_service.py
backend/tests/: test_agent_protocol.py  test_ai_agents.py  test_ai_graph.py  test_ai_prompts.py  test_ai_state.py  test_evolution_client.py  test_health.py  test_products_and_branding_api.py  test_whatsapp_webhook.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  (+7 more)
(+37 files in other folders)
