[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anyio==4.13.0",
    "fastapi==0.136.1",
    "httpx==0.28.1",
    "langchain==1.2.15",
    "langchain-groq==1.1.2",
    "langgraph==1.1.9",
    "pydantic==2.13.3",
    "pytest==9.0.3",
    "pytest-anyio==0.0.0",
    "sqlalchemy==2.0.49",
    "uvicorn==0.46.0",
]
